--- a/FaceEmotion/FaceEmotion/packages.config
+++ b/FaceEmotion/FaceEmotion/packages.config
@@ -1,7 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DirectShowLib" version="1.0.0" targetFramework="net472" />
+  <package id="log4net" version="2.0.8" targetFramework="net472" />
+  <package id="MathNet.Numerics.Signed" version="4.5.0" targetFramework="net472" />
+  <package id="MetriCam2" version="16.0.0.938" targetFramework="net472" />
+  <package id="MetriCam2.Cameras.WebCam" version="16.0.0.938" targetFramework="net472" />
+  <package id="Metrilus.Util" version="16.1.0.527" targetFramework="net472" />
   <package id="Microsoft.Azure.CognitiveServices.Vision.Face" version="2.5.0-preview.1" targetFramework="net472" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.20" targetFramework="net472" />
   <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.18" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net472" />
+  <package id="WPFMediaKit" version="2.2.0" targetFramework="net472" />
 </packages>
